Agregada la ruta para eliminar ordenes
